--- a/layout/tyv-3-rows.yaml
+++ b/layout/tyv-3-rows.yaml
@@ -182,49 +182,8 @@ longpress:
   '"': '" „ “ ” « »'
   '“': '" „ “ ” « »'
 
-# transforms:
-#   '´':
-#     ' ': '´'
-#     а: а́
-#     е: е́
-#     о: о́
-#     ы: ы́
-#     э: э́
-#     ю: ю́
-#     я: я́
-#     и: и́
-#     у: у́
-#     ө: ө́ 
-#     ү: ү́
-#     г: ѓ 
-#     к: ќ
-#   ¨:
-#     ' ': ¨
-#     а: ӓ
-#     о: ӧ
-#     у: ӱ
-#     ы: ӹ
-#     э: ӭ
-#     е: ё 
-#     и: ӥ 
-#     ә: ӛ 
-#     ԑ: ԑ̈ 
-#     ө: ӫ 
-#     ж: ӝ 
-#     ч: ӵ
-#   ¯:
-#     ' ': '¯'
-#     е: е̄
-#     о: о̄
-#     ы: ы̄
-#     э: э̄
-#     ю: ю̄
-#     я: я̄
-#     и: ӣ
-#     у: ӯ
-
 keyNames:
-  space: хостуг чер
+  space: ажык
   return: дедир
  return-alts:
    search: дилээр
