--- a/layout/tyv/tyv-3-rows-ios.yaml
+++ b/layout/tyv/tyv-3-rows-ios.yaml
@@ -85,33 +85,7 @@ iOS:
   deadKeys:
     alt: ['¯', '¨', '´']
 
-longpress:
-  Ү: Ц
-  Е: Ё
-  Ш: Щ
-  Ө: Ф
-  Д: -
-  Т: –
-  Ь: Ъ
-  ү: ц
-  е: ё
-  ш: щ
-  ө: ф
-  д: -
-  т: –
-  ь: ъ
-  $: ₽
-  '%': ‰ ∞
-  '=': ≠ ≈
-  '-': • – —
-  '&': §
-  '?': ¿
-  '!': ¡
-  '.': ', ; : ? ! ¿ ¡'
-  "'": "' ‚ ‘ ’"
-  '‘': "' ‚ ‘ ’"
-  '"': '" „ “ ” « »'
-  '“': '" „ “ ” « »'
+longpress: !include tyv-longpress.yaml
 
 keyNames:
   space: ажык
