--- a/layout/tyv/tyv-macos.yaml
+++ b/layout/tyv/tyv-macos.yaml
@@ -12,7 +12,7 @@ macOS:
         й ү у к е н ң г ш з х ъ ё
         ө ы в а п р о л д ж э
         я ч с м и т ь б ю / 
-      shift: |
+      shift: &SHIFT |
         Й Ү У К Е Н Ң Г Ш З Х Ъ Ё
         Ө Ы В А П Р О Л Д Ж Э
         Я Ч С М И Т Ь Б Ю ? 
@@ -20,8 +20,8 @@ macOS:
         Й Ү У К Е Н Ң Г Ш З Х Ъ Ё
         Ө Ы В А П Р О Л Д Ж Э 
         Я Ч С М И Т Ь Б Ю / 
-      caps+shift: #shift
-      alt: |
+      caps+shift: *SHIFT
+      alt: &ALT |
         ј ц ќ ® † њ ѓ ѕ щ ‘ “ ъ ё
         ф ы ћ ÷ © ₽ ° љ ∆ … э
         ђ ≈ ≠ µ и ™ ~ ≤ ≥ “
@@ -29,18 +29,18 @@ macOS:
         Ј Ц Ќ ® † Њ Ѓ Ѕ Щ ’ ” Ъ Ё
         Ф Ы Ћ ÷ © ₽ • Љ ∆ … Э
         Ђ ≈ ≠ µ И ™ ~ < > „
-      alt+caps: #alt
+      alt+caps: *ALT
       ctrl: |
-      cmd: |
+      cmd: &CMD |
         q w e r t y u i o p [ ] \
         a s d f g h j k l ; '
         z x c v b n m , . /
-      cmd+shift: |
+      cmd+shift: &CMD+SHIFT |
         Q W E R T Y U I O P { } |
         A S D F G H J K L : "
         ~ Z X C V B N M < > ?
-      cmd+alt: #cmd
-      cmd+alt+shift: #cmd+shift
+      cmd+alt: *CMD
+      cmd+alt+shift: *CMD+SHIFT
   deadKeys:
     alt: []
     alt+caps: []
