--- a/layout/tyv/tyv-3-rows.yaml
+++ b/layout/tyv/tyv-3-rows.yaml
@@ -92,7 +92,7 @@ keyNames:
   return: Киирер
   return-alts:
     search: Дилээр
-    go: Че
+    go: Шилчиир
     send: Чорудар
     join: Коштунар
     continue: Улаштыр
