--- a/layout/tat/tat-4-rows.yaml
+++ b/layout/tat/tat-4-rows.yaml
@@ -9,15 +9,13 @@ iOS:
   primary:
     layers:
       default: |
-        ё ү ө ә ң җ һ ъ
-        й ц у к е н г ш щ з х
-        ф ы в а п р о л д ж э
-        \s{shift} я ч с м и т ь б ю \s{backspace} 
+        й ц у к е н г ш щ з х ө
+        ф ы в а п р о л д ж э ә
+        \s{shift} я ч с м и т ь б ю җ \s{backspace} 
       shift: |
-        Ё Ү Ө Ә Ң Җ Һ Ъ
-        Й Ц У К Е Н Г Ш Щ З Х
-        Ф Ы В А П Р О Л Д Ж Э
-        \s{shift} Я Ч С М И Т Ь Б Ю \s{backspace}
+        Й Ц У К Е Н Г Ш Щ З Х Ө
+        Ф Ы В А П Р О Л Д Ж Э Ә
+        \s{shift} Я Ч С М И Т Ь Б Ю Җ \s{backspace}
       symbols-1: |
         1 2 3 4 5 6 7 8 9 0
         - / : ; ( ) ₽ & @ "
