--- a/layout/rus/rus-3-rows.yaml
+++ b/layout/rus/rus-3-rows.yaml
@@ -60,7 +60,7 @@ iOS:
       shift: |
         <                ! ” № % : , . ; ( ) _ + \s{backspace:1.5}
         \s{tab:1.5}      Й Ц У К Е Н Г Ш Щ З Х Ъ \s{return}
-        \s{caps:1.75}    Ө Ы В А П Р О Л Д Ж Э Ё \s{return:0.75}
+        \s{caps:1.75}    Ф Ы В А П Р О Л Д Ж Э Ё \s{return:0.75}
         \s{shift:1.25} [ Я Ч С М И Т Ь Б Ю ?     \s{shift:2.25}
       alt: |
         `                1 2 3 4 5 6 7 8 9 0 < > \s{backspace:1.5}
