--- a/layout/tat/tat-3-rows-rus.yaml
+++ b/layout/tat/tat-3-rows-rus.yaml
@@ -53,15 +53,15 @@ iOS:
   iPad-12in:
     layers:
       default: |
-        (                “ - ү ө ә , . ң җ һ « » =   \s{backspace:1.5}
-        \s{tab:1.5}      й ц у к е н г ш щ з х ъ ё
-        \s{caps:1.75}    ф ы в а п р о л д ж э       \s{return:1.75}
-        \s{shift:1.25} ] я ч с м и т ь б ю /         \s{shift:2.25}
+        >                1 2 3 4 5 6 7 8 9 0 - =   \s{backspace:1.5}
+        \s{tab:1.5}      й ц у к е н г ш щ з х ү
+        \s{caps:1.75}    ф ы в а п р о л д ж э ә   \s{return:1.75}
+        \s{shift:1.25} ] я ч с м и т ь б ю ң /     \s{shift:2.25}
       shift: |
-        )                ! — Ү Ө Ә ; : Ң Җ Һ [ ] +   \s{backspace:1.5}
-        \s{tab:1.5}      Й Ц У К Е Н Г Ш Щ З Х Ъ Ё   
-        \s{caps:1.75}    Ф Ы В А П Р О Л Д Ж Э       \s{return:1.75}
-        \s{shift:1.25} [ Я Ч С М И Т Ь Б Ю ?         \s{shift:2.25}
+        <                ! ” № % : , . ; ( ) _ +   \s{backspace:1.5}
+        \s{tab:1.5}      Й Ц У К Е Н Г Ш Щ З Х Ү   
+        \s{caps:1.75}    Ф Ы В А П Р О Л Д Ж Э Ә   \s{return:1.75}
+        \s{shift:1.25} [ Я Ч С М И Т Ь Б Ю Ң ?       \s{shift:2.25}
       alt: |
         `                1 2 3 4 5 6 7 8 9 0 < >     \s{backspace:1.5}
         \s{tab:1.5}      [ ] { } # % ^ * + = \ |    
