--- a/layout/tat/tat-3-rows-rus.yaml
+++ b/layout/tat/tat-3-rows-rus.yaml
@@ -1,7 +1,7 @@
 displayNames:
-  en: Tatar
-  ru: Татарский
-  tt: Татарча
+  en: Tatar (Russian)
+  ru: Татарский (русская)
+  tt: Татарча (урыс)
 
 decimal: ','
 
