--- a/layout/tat/tat-pc-macos.yaml
+++ b/layout/tat/tat-pc-macos.yaml
@@ -1,7 +1,7 @@
 displayNames:
   en: Tatar (PC)
   ru: Татарский (ПК)
-  tat: Татарча (ПК)
+  tt: Татарча (ПК)
 
 decimal: ','
 
@@ -22,12 +22,12 @@ macOS:
         Я Ч С М И Т Җ Б Ю ,
       caps+shift: *SHIFT
       alt: &ALT |
-        # ц € ₽ ™ ⌀ < > щ [ ] ъ ё
-        ≈ § ° £ $ · „ “ ” ж ’
+        # ц € ҡ ™ ⌀ ғ > щ [ ] ъ ё
+        ≈ § ° £ $ ₽ „ “ ” ж ’
         • × © ↓ ß ⌀ ь « » …
       alt+shift: |
-        ˘ Ц ⌥ ® # ← → ∞ Щ { } Ъ Ё
-        ≠ ± ↑ ˇ ↑   ∆ ‘ ’ Ж ‘
+        ˘ Ц ⌥ Ҡ # ← Ғ ∞ Щ { } Ъ Ё
+        ≠ ± ↑ ˇ ↑ ® ∆ ‘ ’ Ж ‘
         ↓ · ¢ µ ẞ ˜ Ь „ “ ´
       alt+caps: *ALT
       cmd: &CMD |
